k8s/clusters/in-cluster/petitstream/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-dev
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-dev
    spec:
      containers:
        - name: phpfpm
          image: bitnami/php-fpm:8.1
          ports:
            - containerPort: 3000
              protocol: TCP
              name: app
