k8s/clusters/in-cluster/petitstream/deployments-dev.yml
# yamllint disable rule:line-length
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-frontend-dev
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-frontend-dev
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-frontend-dev
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: frontend
          image: petitstream/petitstream.com:latest
          args:
            - frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-master-dev
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-backend-dev
      role: master
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: petitstream-backend-dev
        role: master
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com:latest
          args:
            - backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
          livenessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-worker-dev
spec:
  replicas: 0
  selector:
    matchLabels:
      component: petitstream-backend-dev
      role: worker
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-backend-dev
        role: worker
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com:latest
          args:
            - backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
          livenessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
