k8s/clusters/in-cluster/petitstream/deployments-prod.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-frontend-prod
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-frontend-prod
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: frontend
          image: petitstream/petitstream.com:latest
          command:
            - /app/entrypoint.sh
          args:
            - frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-master-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-backend-prod
      role: master
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: petitstream-backend-prod
        role: master
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com:latest
          command:
            - /app/entrypoint.sh
          args:
            - backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
          livenessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-worker-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-backend-prod
      role: worker
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-backend-prod
        role: worker
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com:latest
          command:
            - /app/entrypoint.sh
          args:
            - backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
          livenessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
