k8s/clusters/in-cluster/petitstream/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-frontend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-frontend-dev
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-frontend-dev
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: frontend
          image: petitstream/petitstream.com:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      component: petitstream-backend-dev
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-backend-dev
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
