k8s/clusters/in-cluster/petitstream/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petitstream
spec:
  type: ExternalName
  externalName: petitstream.vm.athena.mareo.fr
