k8s/clusters/in-cluster/petitstream/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: public
  rules:
    - host: dev.petitstream.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petitstream
                port:
                  name: https
  tls:
    - hosts:
        - dev.petitstream.com
      secretName: argocd-tls
